include/El/lapack_like/perm.h

EL_EXPORT ElError ElApplyInverseSymmetricPivots_i
( ElUpperOrLower uplo, ElMatrix_i A, ElConstMatrix_i p, ElInt offset );
EL_EXPORT ElError ElApplyInverseSymmetricPivots_s
( ElUpperOrLower uplo, ElMatrix_s A, ElConstMatrix_i p, ElInt offset );
EL_EXPORT ElError ElApplyInverseSymmetricPivots_d
( ElUpperOrLower uplo, ElMatrix_d A, ElConstMatrix_i p, ElInt offset );
EL_EXPORT ElError ElApplyInverseSymmetricPivots_c
( ElUpperOrLower uplo, ElMatrix_c A, ElConstMatrix_i p, 
  bool conjugate, ElInt offset );
EL_EXPORT ElError ElApplyInverseSymmetricPivots_z
( ElUpperOrLower uplo, ElMatrix_z A, ElConstMatrix_i p, 
  bool conjugate, ElInt offset );
EL_EXPORT ElError ElApplyInverseSymmetricPivotsDist_i
( ElUpperOrLower uplo, ElDistMatrix_i A, ElConstDistMatrix_i p, ElInt offset );
EL_EXPORT ElError ElApplyInverseSymmetricPivotsDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A, ElConstDistMatrix_i p, ElInt offset );
EL_EXPORT ElError ElApplyInverseSymmetricPivotsDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A, ElConstDistMatrix_i p, ElInt offset );
EL_EXPORT ElError ElApplyInverseSymmetricPivotsDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A, ElConstDistMatrix_i p, 
  bool conjugate, ElInt offset );
EL_EXPORT ElError ElApplyInverseSymmetricPivotsDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A, ElConstDistMatrix_i p, 
  bool conjugate, ElInt offset );