include/El/lapack_like/perm.py


lib.ElApplyInverseSymmetricPivots_i.argtypes = \
  [c_uint,c_void_p,c_void_p,iType]
lib.ElApplyInverseSymmetricPivots_i.restype = c_uint
lib.ElApplyInverseSymmetricPivots_s.argtypes = \
  [c_uint,c_void_p,c_void_p,iType]
lib.ElApplyInverseSymmetricPivots_s.restype = c_uint
lib.ElApplyInverseSymmetricPivots_d.argtypes = \
  [c_uint,c_void_p,c_void_p,iType]
lib.ElApplyInverseSymmetricPivots_d.restype = c_uint
lib.ElApplyInverseSymmetricPivots_c.argtypes = \
  [c_uint,c_void_p,c_void_p,bType,iType]
lib.ElApplyInverseSymmetricPivots_c.restype = c_uint
lib.ElApplyInverseSymmetricPivots_z.argtypes = \
  [c_uint,c_void_p,c_void_p,bType,iType]
lib.ElApplyInverseSymmetricPivots_z.restype = c_uint
lib.ElApplyInverseSymmetricPivotsDist_i.argtypes = \
  [c_uint,c_void_p,c_void_p,iType]
lib.ElApplyInverseSymmetricPivotsDist_i.restype = c_uint
lib.ElApplyInverseSymmetricPivotsDist_s.argtypes = \
  [c_uint,c_void_p,c_void_p,iType]
lib.ElApplyInverseSymmetricPivotsDist_s.restype = c_uint
lib.ElApplyInverseSymmetricPivotsDist_d.argtypes = \
  [c_uint,c_void_p,c_void_p,iType]
lib.ElApplyInverseSymmetricPivotsDist_d.restype = c_uint
lib.ElApplyInverseSymmetricPivotsDist_c.argtypes = \
  [c_uint,c_void_p,c_void_p,bType,iType]
lib.ElApplyInverseSymmetricPivotsDist_c.restype = c_uint
lib.ElApplyInverseSymmetricPivotsDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p,bType,iType]
lib.ElApplyInverseSymmetricPivotsDist_z.restype = c_uint
def ApplyInverseSymmetricPivots(uplo,A,p,conjugate=False,offset=0):
  if type(A) is not type(p):
    raise Exception('Types of A and p must match')
  if p.tag != iTag:
    raise Exception('p must be integral')
  if type(A) is Matrix:
    if   A.tag == iTag: 
      lib.ElApplyInverseSymmetricPivots_i(uplo,A.obj,pivots.obj,offset)
    elif A.tag == sTag: 
      lib.ElApplyInverseSymmetricPivots_s(uplo,A.obj,pivots.obj,offset)
    elif A.tag == dTag: 
      lib.ElApplyInverseSymmetricPivots_d(uplo,A.obj,pivots.obj,offset)
    elif A.tag == cTag: 
      lib.ElApplyInverseSymmetricPivots_c \
      (uplo,A.obj,pivots.obj,conjugate,offset)
    elif A.tag == zTag: 
      lib.ElApplyInverseSymmetricPivots_z \
      (uplo,A.obj,pivots.obj,conjugate,offset)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == iTag: 
      lib.ElApplyInverseSymmetricPivotsDist_i(uplo,A.obj,pivots.obj,offset)
    elif A.tag == sTag: 
      lib.ElApplyInverseSymmetricPivotsDist_s(uplo,A.obj,pivots.obj,offset)
    elif A.tag == dTag: 
      lib.ElApplyInverseSymmetricPivotsDist_d(uplo,A.obj,pivots.obj,offset)
    elif A.tag == cTag: 
      lib.ElApplyInverseSymmetricPivotsDist_c \
      (uplo,A.obj,pivots.obj,conjugate,offset)
    elif A.tag == zTag: 
      lib.ElApplyInverseSymmetricPivotsDist_z \
      (uplo,A.obj,pivots.obj,conjugate,offset)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Explicit permutation
# ====================
# TODO

# Invert permutation
# ==================
# TODO

# Permute columns
# ===============
# TODO

# Permute rows
# ============
# TODO

# Pivot parity
# ============
# TODO

# Convert a pivot sequence to a partial permutation vector
# ========================================================
# TODO

# Convert a pivot sequence to a permutation vector
# ================================================
# TODO
